Fix deflate algorithm